# auto-ai-app-builder

./: .gitignore  README.md  codemagic.yaml  pubspec.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODEMAGIC.md  ROADMAP.md
lib/: main.dart
server/: .env.example  Dockerfile  pyproject.toml
server/app/: __init__.py  main.py  models.py  settings.py  storage.py
server/app/api/: build.py  generate.py  projects.py
server/app/builder/: __init__.py  base.py  docker_flutter.py  stub.py
server/app/codegen/: __init__.py  anthropic.py  base.py  templated.py
server/tests/: conftest.py  test_generation.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/proxy/[...path]/: route.ts
web/app/calculator/: page.tsx
web/components/: ArchitectureCheckboxes.tsx  BuildStatus.tsx  Calculator.tsx  CodePreview.tsx  DownloadCard.tsx  IdeaForm.tsx
web/lib/: api.ts
